modules/gdscript/tests/scripts/parser/errors/multiple_number_separators_after_decimal.gd
func test():
	# Number separators may not be placed right next to each other.
	var _num = 123.45__67
